[metadata]
name = mdb_tools
version = 0.5.1
author = Nelson Moore
author_email = nelsonwmoore@gmail.com
description = Tools to work with the Metamodel Database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nelsonwmoore/HIDS-Capstone
project_urls =
    Bug Tracker = https://github.com/nelsonwmoore/HIDS-Capstone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src